--- a/src/app/style.css
+++ b/src/app/style.css
@@ -3,6 +3,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .headerCore {
@@ -104,4 +105,23 @@ padding: 10px;
       background: var(--word-correct);
     
   
+  }
+
+
+
+  .controls{
+    padding: 10px;
+  }
+
+  .controls .submitBtn{
+    padding: 8px 24px;
+    border-radius: 5px;
+    font-size: 20px;
+    background: var(--word-correct);
+    border: unset;
+    color: #fff;
+    font-weight: 700;
+    text-transform: uppercase; 
+    border: 4px solid var(--word-present);
+    cursor: pointer;
   }
