--- a/src/app/style.css
+++ b/src/app/style.css
@@ -175,5 +175,22 @@ padding: 10px;
     background: #000;
     border-radius: 5px;
     border: 1px solid #575757;
+    padding: 5px;
+    position: relative;
+}
 
+.popupContainer .popupBox   .close {
+    position: absolute;
+    right: 0;
+    padding: 1px;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    width: 20px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    font-size: 13px;
+    align-items: center;
+    margin: 2px 6px;
+    cursor: pointer;
 }
