Update popup background color

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -172,7 +172,7 @@ padding: 10px;
 .popupContainer .popupBox {
     width: 450px;
     min-height: 500px;
-    background: #000;
+    background: var(--background-color);
     border-radius: 5px;
     border: 1px solid #575757;
     padding: 5px;
