--- a/src/app/style.css
+++ b/src/app/style.css
@@ -7,16 +7,29 @@
 }
 
 .headerCore {
-    text-align: center;
-    padding: 10px 0;
+    padding: 10px 15px;
     border-bottom: 1px solid #3a3a3c;
     width: 100%;
+    display: flex;
+    align-items: center;
+}
+.headerCore .block {
+    flex: 1;
+    display: flex;
 }
 
+.headerCore .KeyboardLayout{
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #fff ;
+    cursor: pointer;
+    font-size: 14px;
+}
 .logo{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 1;
 }
 .logo span{
     font-size: 27px;
